syntax = "proto3";

option go_package = "../helloworld";

service Route {
    rpc Connect(ConnectRequest) returns (Acknowledgement){}
    rpc SayHello(RequestText) returns (ReplyText) {}
    rpc BroadcastMessage(RequestText) returns (GenericText){}
}

message ConnectRequest{
    int64 id = 1;
}

message Acknowledgement{
    string status = 1;
}

message RequestText {
    string body = 1;
    Client client = 2;
}

message ReplyText {
    string body = 1;
}


message GenericText{
    string body = 1;
}


//Helper functions

message Client {
    int64 id = 1;
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative route/route.proto