syntax = "proto3";

option go_package = "../program";

service Route {
    rpc Connect(ConnectRequest) returns (Acknowledgement){}
    rpc SendLeaderHeartBeat(HeartBeat) returns (Acknowledgement) {}
    rpc ElectionResult(RequestText) returns (Acknowledgement) {}
}

message Empty {

}

message ConnectRequest{
    int32 id = 1;
}

message Acknowledgement{
    string status = 1;
}

message RequestText {
    string body = 1;
    int32 id = 2;
}

message ReplyText {
    string body = 1;
}

message GenericText{
    string body = 1;
}

//Helper functions
message HeartBeat{
    LamportTimeStamp time = 1;
    int32 id = 2;
}


message LamportTimeStamp {
    int32 lamport = 1;
}







//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative route/route.proto